--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,13 @@
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "5.0.*",
         "symfony/framework-bundle": "5.0.*",
         "symfony/http-foundation": "5.0.*",
         "symfony/orm-pack": "^1.0",
+        "symfony/security-csrf": "5.0.*",
         "symfony/string": "5.0.*",
+        "symfony/validator": "5.0.*",
         "symfony/yaml": "5.0.*",
         "twig/twig": "^3.0"
     },
