--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,14 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\EventListener\FigureChangedNotifier:
+        tags:
+            -
+                # these are the basic options that define the entity listener
+                name: 'doctrine.orm.entity_listener'
+                event: 'prePersist'
+                entity: 'App\Entity\Figure'
+
+                # set the 'lazy' option to TRUE to only instantiate listeners when they are used
+                lazy: true
