WIP : security in progress

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/framework-bundle": "5.0.*",
         "symfony/http-foundation": "5.0.*",
         "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "5.0.*",
         "symfony/security-csrf": "5.0.*",
         "symfony/string": "5.0.*",
         "symfony/validator": "5.0.*",
@@ -24,7 +25,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "phpstan/phpstan": "^0.12.18",
-        "symfony/maker-bundle": "^1.14",
+        "symfony/maker-bundle": "^1.17",
         "symfony/phpunit-bridge": "^5.0",
         "symfony/profiler-pack": "^1.0"
     },
